--- a/formulario.html
+++ b/formulario.html
@@ -136,6 +136,10 @@
   </footer>
 
 </section>
+
+<section id="datos" class="datos">
+
+</section>
   
   <!-- JS -->
     <script src="js/main.js" type="module"></script>
