--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- CSS -->
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <!-- Font Awesome-->
   <script src="https://kit.fontawesome.com/119eb74f6b.js" crossorigin="anonymous"></script>
   <!-- Google Fonts -->
@@ -40,20 +40,20 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="productos.html">Café & Pasteleria</a>
             </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                  data-bs-toggle="dropdown" aria-expanded="false">
-                  <i class="fas fa-user"></i>
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" href="formulario.html">Iniciar sesión</a></li>
-                  <li><a class="dropdown-item" href="formulario.html">Crear cuenta</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link dropdown" aria-current="page" href="carrito.html"><i
-                    class="fas fa-shopping-cart"></i></a>
-              </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                <i class="fas fa-user"></i>
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <li><a class="dropdown-item" href="formulario.html">Iniciar sesión</a></li>
+                <li><a class="dropdown-item" href="formulario.html">Crear cuenta</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link dropdown" aria-current="page" href="carrito.html"><i
+                  class="fas fa-shopping-cart"></i></a>
+            </li>
           </ul>
         </div>
       </div>
@@ -91,8 +91,20 @@
     <em>con productos orgánicos y café de especialidad.</em>
   </div>
 
-  <footer>
-
+  <!-- footer -->
+  <footer class="footer">
+    <section>
+      <p>Contactanos</p>
+      <a href="https://www.facebook.com/">
+        <img src="images/face.png" alt="Facebook">
+      </a>
+      <a href="https://www.instagram.com/">
+        <img src="images/insta.png" alt="Instagram">
+      </a>
+      <a href="https://www.gmail.com/">
+        <img src="images/mail.png" alt="Mail">
+      </a>
+    </section>
   </footer>
 
   <!-- JS -->
@@ -105,8 +117,8 @@
 
   <!-- Bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-      crossorigin="anonymous"></script>
+    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
