--- a/carrito.html
+++ b/carrito.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- CSS -->
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <!-- Font Awesome-->
   <script src="https://kit.fontawesome.com/119eb74f6b.js" crossorigin="anonymous"></script>
   <!-- Google Fonts -->
@@ -60,67 +60,79 @@
     </nav>
   </header>
 
-    <div class="container">
-      <hr>
-      <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">Producto</th>
-            <th scope="col">Cantidad</th>
-            <th scope="col">Acción</th>
-            <th scope="col">Total</th>
-          </tr>
-        </thead>
-        <tbody id="items"></tbody>
-        <tfoot>
-          <tr id="footer">
-            <th scope="row" colspan="5">Carrito vacío - comience a comprar!</th>
-          </tr>
-        </tfoot>
-      </table>
-      <div class="row" id="cards"></div>
-    </div>
+  <div class="container">
+    <hr>
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">Producto</th>
+          <th scope="col">Cantidad</th>
+          <th scope="col">Acción</th>
+          <th scope="col">Total</th>
+        </tr>
+      </thead>
+      <tbody id="items"></tbody>
+      <tfoot>
+        <tr id="footer">
+          <th scope="row" colspan="5">Carrito vacío - comience a comprar!</th>
+        </tr>
+      </tfoot>
+    </table>
+    <div class="row" id="cards"></div>
+  </div>
 
-    <template id="template-carrito">
-      <tr>
-        <td>Café</td>
-        <td>1</td>
-        <td>
-          <button class="btn btn-info btn-sm">
-            +
-          </button>
-          <button class="btn btn-danger btn-sm">
-            -
-          </button>
-        </td>
-        <td>$ <span>500</span></td>
-      </tr>
-    </template>
-
-    <template id="template-footer">
-      <th scope="row" colspan="1">Total productos</th>
-      <td>10</td>
+  <template id="template-carrito">
+    <tr>
+      <td>Café</td>
+      <td>1</td>
       <td>
-        <button class="btn btn-danger btn-sm" id="vaciar-carrito">
-          Vaciar carrito
+        <button class="btn btn-info btn-sm">
+          +
+        </button>
+        <button class="btn btn-danger btn-sm">
+          -
         </button>
       </td>
-      <td class="font-weight-bold">$ <span>5000</span></td>
-      <td>
-        <a href="resumen.html">
-          <button class="btn btn-success btn-sm" id="resumen">
-            Finalizar compra
-          </button></a>
-      </td>
-    </template>
-    
+      <td>$ <span>500</span></td>
+    </tr>
+  </template>
 
-  <footer>
+  <template id="template-footer">
+    <th scope="row" colspan="1">Total productos</th>
+    <td>10</td>
+    <td>
+      <button class="btn btn-danger btn-sm" id="vaciar-carrito">
+        Vaciar carrito
+      </button>
+    </td>
+    <td class="font-weight-bold">$ <span>5000</span></td>
+    <td>
+      <a href="resumen.html">
+        <button class="btn btn-success btn-sm" id="resumen">
+          Finalizar compra
+        </button></a>
+    </td>
+  </template>
+
+  <!-- footer -->
+  <footer class="footer">
+    <section>
+      <p>Contactanos</p>
+      <a href="https://www.facebook.com/">
+        <img src="images/face.png" alt="Facebook">
+      </a>
+      <a href="https://www.instagram.com/">
+        <img src="images/insta.png" alt="Instagram">
+      </a>
+      <a href="https://www.gmail.com/">
+        <img src="images/mail.png" alt="Mail">
+      </a>
+    </section>
   </footer>
 
   <!-- JS -->
-  <script src="/js/carrito.js" type="module"></script>
-  <script src="/js/main.js" type="module"></script>
+  <script src="js/carrito.js" type="module"></script>
+  <script src="js/main.js" type="module"></script>
 
   <!-- Bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
