--- a/resumen.html
+++ b/resumen.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- CSS -->
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <!-- Font Awesome-->
   <script src="https://kit.fontawesome.com/119eb74f6b.js" crossorigin="anonymous"></script>
   <!-- Google Fonts -->
@@ -62,82 +62,95 @@
 
   <!-- Finalizar compra -->
   <section class="finalizarCompra">
-      <h4>Te estamos redirigiendo a Mercado Pago</h4>
-      <h6 class="avisoCompra"></h6>
+    <h4>Te estamos redirigiendo a Mercado Pago</h4>
+    <h6 class="avisoCompra"></h6>
     <img src="https://imgmp.mlstatic.com/org-img/banners/ar/medios/785X40.jpg" title="Mercado Pago - Medios de pago"
       alt="Mercado Pago - Medios de pago" width="785" height="40" />
   </section>
 
-<section class="contenidoForm">
-  <div class="container">
-    <hr>
-    <table class="table">
-      <thead>
-        <tr>
-          <th scope="col">Producto</th>
-          <th scope="col">Cantidad</th>
-          <th scope="col">Acción</th>
-          <th scope="col">Total</th>
-        </tr>
-      </thead>
-      <tbody id="items"></tbody>
-      <tfoot>
-        <tr id="footer">
-          <th scope="row" colspan="5">Carrito vacío - comience a comprar!</th>
-        </tr>
-      </tfoot>
-    </table>
-    <div class="row" id="cards"></div>
-  </div>
+  <section class="contenidoForm">
+    <div class="container">
+      <hr>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Producto</th>
+            <th scope="col">Cantidad</th>
+            <th scope="col">Acción</th>
+            <th scope="col">Total</th>
+          </tr>
+        </thead>
+        <tbody id="items"></tbody>
+        <tfoot>
+          <tr id="footer">
+            <th scope="row" colspan="5">Carrito vacío - comience a comprar!</th>
+          </tr>
+        </tfoot>
+      </table>
+      <div class="row" id="cards"></div>
+    </div>
 
-  <template id="template-carrito">
-    <tr>
-      <td>Café</td>
-      <td>1</td>
+    <template id="template-carrito">
+      <tr>
+        <td>Café</td>
+        <td>1</td>
+        <td>
+          <button class="btn btn-info btn-sm">
+            +
+          </button>
+          <button class="btn btn-danger btn-sm">
+            -
+          </button>
+        </td>
+        <td>$ <span>500</span></td>
+      </tr>
+    </template>
+
+    <template id="template-footer">
+      <th scope="row" colspan="1">Total productos</th>
+      <td>10</td>
       <td>
-        <button class="btn btn-info btn-sm">
-          +
-        </button>
-        <button class="btn btn-danger btn-sm">
-          -
+        <button class="btn btn-danger btn-sm" id="vaciar-carrito">
+          Vaciar carrito
         </button>
       </td>
-      <td>$ <span>500</span></td>
-    </tr>
-  </template>
+      <td class="font-weight-bold">$ <span>5000</span></td>
+      <td>
+        <a href="resumen.html">
+          <button class="btn btn-success btn-sm" id="resumen">
+            Finalizar compra
+          </button></a>
+      </td>
+    </template>
 
-  <template id="template-footer">
-    <th scope="row" colspan="1">Total productos</th>
-    <td>10</td>
-    <td>
-      <button class="btn btn-danger btn-sm" id="vaciar-carrito">
-        Vaciar carrito
-      </button>
-    </td>
-    <td class="font-weight-bold">$ <span>5000</span></td>
-    <td>
-      <a href="resumen.html">
-        <button class="btn btn-success btn-sm" id="resumen">
-          Finalizar compra
-        </button></a>
-    </td>
-  </template>
-
-  <template id="template-card">
-    <div class="cards col-12 mb-2 col-md-4">
-      <div class="card" style="width: 18rem;">
-        <img src="" alt="" class="card-img-top">
-        <div class="card-body">
-          <h5>Titulo</h5>
-          <p>precio</p>
-          <button class="btn btn-dark">Comprar</button>
+    <template id="template-card">
+      <div class="cards col-12 mb-2 col-md-4">
+        <div class="card" style="width: 18rem;">
+          <img src="" alt="" class="card-img-top">
+          <div class="card-body">
+            <h5>Titulo</h5>
+            <p>precio</p>
+            <button class="btn btn-dark">Comprar</button>
+          </div>
         </div>
       </div>
-    </div>
-  </template>
-</section>
+    </template>
+  </section>
 
-  <footer>
+  <!-- footer -->
+  <footer class="footer">
+    <section>
+      <p>Contactanos</p>
+      <a href="https://www.facebook.com/">
+        <img src="images/face.png" alt="Facebook">
+      </a>
+      <a href="https://www.instagram.com/">
+        <img src="images/insta.png" alt="Instagram">
+      </a>
+      <a href="https://www.gmail.com/">
+        <img src="images/mail.png" alt="Mail">
+      </a>
+    </section>
   </footer>
 
   <!-- JS -->
@@ -145,7 +158,7 @@
   <script src="js/searchCards.js" type="module"></script>
   <script src="js/domSearch.js" type="module"></script>
   <script src="jquery/jquery.js" type="module"></script>
-  
+
 
   <!-- jQuery-->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
